<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yoon.brokenglasses.Main.Fragment.Player.PlayerFragment">
    <data>
        <variable
            name="player"
            type="com.yoon.brokenglasses.Main.Fragment.Player.PlayerFragment">

        </variable>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/request"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_marginBottom="@dimen/apart"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_tag"
                    android:layout_marginBottom="@dimen/apart"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/personal_name"
                    android:layout_marginBottom="@dimen/apart"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:layout_marginBottom="@dimen/apart"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday_sample"
                    android:maxLines="1"
                    android:layout_marginBottom="@dimen/apart"
                    android:id="@+id/personal_et_birthday"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/apart">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/height"
                        android:inputType="number"
                        android:id="@+id/personal_et_height"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight"
                        android:inputType="number"
                        android:id="@+id/personal_et_weight"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job"
                    android:layout_marginBottom="@dimen/apart"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/personal_job_spinner"
                    android:layout_marginBottom="@dimen/apart">
                </Spinner>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region"
                    android:layout_marginBottom="@dimen/apart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/myRegion"
                    android:layout_marginBottom="@dimen/apart"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/apart">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_main1"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_sub1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/apart">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_main2"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_sub2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/apart">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_main3"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/personal_sub3"/>
                </LinearLayout>
                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:layout_marginBottom="@dimen/apart"
                    >
                    <CheckBox android:id="@+id/personal_LFW"/>
                    <CheckBox android:id="@+id/personal_CFW"/>
                    <CheckBox android:id="@+id/personal_RFW"/>
                    <View
                        android:layout_width="0dp">
                    </View>
                    <CheckBox android:id="@+id/personal_ACM"/>
                    <View
                        android:layout_width="0dp">
                    </View>

                    <CheckBox android:id="@+id/personal_LWM"/>
                    <CheckBox android:id="@+id/personal_CM"/>
                    <CheckBox android:id="@+id/personal_RWM"/>
                    <View
                        android:layout_width="0dp">
                    </View>
                    <CheckBox android:id="@+id/personal_DCM"/>
                    <View
                        android:layout_width="0dp">
                    </View>

                    <CheckBox android:id="@+id/personal_LB"/>
                    <CheckBox android:id="@+id/personal_CD"/>
                    <CheckBox android:id="@+id/personal_RB"/>
                    <View
                        android:layout_width="0dp">
                    </View>
                    <CheckBox android:id="@+id/personal_GK"/>
                    <View
                        android:layout_width="0dp">
                    </View>

                </GridLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="@dimen/apart"
                    android:background="@color/LightGray">
                </View>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:textColor="@color/white"
                    android:text="@string/btn_personal_register"
                    android:layout_marginBottom="@dimen/apart"
                    android:id="@+id/btn_personal_register"/>
            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</layout>